trying to fix an issue where the page zooms out because of the css animation on the pokedex cover. The cover is supposed to animate off the page but the page is zooming out to keep the cover in view. it's only happening on mobile devices, and doesn't happen in mobile dev tools so have to push to github before I'll know if it's fixed.

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 }
 
 body {
+    max-width: 100vw;
     background: linear-gradient(
         180deg,
         rgba(30, 182, 255, 1) 0%,
